--- a/de.riedelgames.core.networking/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
+++ b/de.riedelgames.core.networking/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
@@ -1,5 +1,5 @@
 #org.springsource.ide.eclipse.gradle.core.preferences.GradleProjectPreferences
-#Thu Sep 08 23:02:03 CEST 2016
+#Mon Sep 12 17:22:58 CEST 2016
 build.family.org.gradle.tooling.model.eclipse.HierarchicalEclipseProject=;
 org.springsource.ide.eclipse.gradle.linkedresources=
-org.springsource.ide.eclipse.gradle.rootprojectloc=../1dpongApp
+org.springsource.ide.eclipse.gradle.rootprojectloc=../../../1dpong/gitRepo
